# Inverted-Index

./: .gitignore  CMakeLists.txt  README.md  readdata.h  timer.h
MPI/: block_task_mpi.cpp  blocked_simplified_adp.cpp  mpi_hello.cpp  simplified_adp_mpi.cpp  zip_zap_mpi.cpp
SIMD/: test_simd.cpp  zip_zap_SIMD.cpp
openMP_parallel/: openMP_early_stop.cpp
serial/: adp_range_based.cpp  adp_range_based_refine.cpp  max_successor.cpp  sequential.cpp  stl_intersection.cpp  svs_range_based.cpp  svs_range_without_sort.cpp  zip_zap_refined.cpp
serial/test/: test_binary_search.cpp
